Wrking Time Change

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                         <td>11:00 - 23:00</td>
                     </tr>
                     <tr>
-                        <th>* Happy hour</th>
+                        <th>Happy hour</th>
                         <td>17:00 - 21:00</td>
                     </tr>
                 </table>
